--- a/templates/dhcpd.conf.j2
+++ b/templates/dhcpd.conf.j2
@@ -11,13 +11,32 @@ subnet {{ dhcp_subnet }} netmask {{ dhcp_netmask }} {
   range {{ dhcp_range_start }} {{ dhcp_range_end }};
   default-lease-time {{ default_lease_time }};
   max-lease-time {{ max_lease_time }};
-  next-server {{ pxe_server_ip }};
-
-  if option arch = 00:07 or option arch = 00:09 {
-    filename "/EFI/x86_64/BOOTX64.EFI";
-  } else if option arch = 00:0b {
-    filename "/EFI/aarch64/BOOTAA64.EFI";
-  } else {
-    filename "/BIOS/x86_64/pxelinux.0";
+  
+  class "pxeclients" {
+    next-server {{ pxe_server_ip }};
+    match if substring (option vendor-class-identifier, 0, 9) = "PXEClient";
+    if option arch = 00:07 or option arch = 00:09 {
+      filename "/EFI/x86_64/BOOTX64.EFI";
+    } else if option arch = 00:0b {
+      filename "/EFI/aarch64/BOOTAA64.EFI";
+    } else {
+      filename "/BIOS/x86_64/pxelinux.0";
+    }
   }
+
+  # UEFI HTTPS Booting Requires the Root CA to be enrolled on the host system
+  # This can be done via the manufacturer firmware tools or Redfish via the CertificateCollection endpoint
+  class "httpclients" {
+    match if substring (option vendor-class-identifier, 0, 10) = "HTTPClient";
+    option vendor-class-identifier "HTTPClient";
+    next-server {{ pxe_server_ip }};
+    if option arch = 00:07 or option arch = 00:09 {
+      filename "https://{{ pxe_server_name }}/pxe/tftpboot/EFI/x86_64/BOOTX64.EFI";
+    } else if option arch = 00:0b {
+      filename "https://{{ pxe_server_name }}/pxe/tftpboot/EFI/aarch64/BOOTAA64.EFI";
+    } else {
+      filename "https://{{ pxe_server_name }}/pxe/tftpboot/EFI/x86_64/BOOTX64.EFI";
+    }
+  }
+  
 }
